# MAS_Extreme_Weather

./: .gitignore  .pylintrc  API_Documentation.md  DRAFT_prototypes_user_journeys.md  DataDefinitions.md  GCP to do.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  README_SUGGESTIONS.md  TODO.md  app.py  artifacts.db  credentials_template.txt  demo.py  fix_arch.sh  fix_architecture_issue.md  frontend-updates-summary.md  phase5_demo.py  phase5_implementation.py  pyproject.toml  readme_build.py  requirements.txt  requirements_old.txt  risk_definitions.py  setup.py  simple_data_test.py  simple_example.py  simple_phase5_test.py  simple_web_demo.py  simple_web_interface.py  standalone_web_interface.py  test_cmr_integration.py  test_data_files.py  test_phase5.py  test_system.py  test_weather.py  verify_openet_dsm.py
TODO/: 2025-12-19_GEE_integration_reminder.md
demo/: demo.py  demo_erddap_native.py  demo_openet.py  simple_example.py
docs/: 0.1000_TODO_NC_Energy_Data_Ctr.md  0.2_Prototypes_table.md  0.3_Pythia_User_User Needs\].md  0.3_Pythia_project_structure.md  0.4_to_integrateinto)0.4.md  0.5_All_Prototypes.md  0.5_All_User_Needs.md  0.5_DRAFT_DNU_User_Stories.md  0.61_AL_CapZone_Manu_Shipyard_Data_Provider_Story_Journey_Data_Needs_requirements.md  0.61_AL_Indigenous_Data_providers.md  0.6_AL_CapZone_Manu_Shipyard_User_Story_Journey_Data_Needs.md  0.6_All_User_to_review.md  0.6_DRAFT_DNU_User_Journeys_by_Prototypes.md  0.711_India_Indigenous.md  0.7_India_prototype.md  0.8_TODO_KS_Ranching_Wtr_Mngmt_Prototype.md  0.9_TODO_CarribeanandFL_Infrastructure.md  000_todo_tomorrow.md  00_Cursor_rules_for_Pythia_Work.md  00_cursor_rules.md  0_Terms_used.md  1.0_Engineering_Roadmap.md  1.1_System_and_architecture_overview.md  1.2_Engineering_Success_metrics.md  1.2_System_Success_Metrics.md  1.3_System_Do_Not_Dos.md  1.4_Engineering_Draft_Devops.md  1_Engineering_Roadmap.md  2.0_Technical_PRD_w_UX_Security_and_Evaluation.md  2.1_Technical_PRD_Pythia_UX_Flow_Diagram.md  2.2_Downscaling_Plan_and_Options.md  2.3_Pythia_UX_More.md  2.5_small_future_feature_notification.md.md  3.0_GCP_Leveraged_For_User_Needs.md  3.2_A2A_Reference.md  3.3_ADK_A2A_Usage_Table.md  3.4_Agent_Guidelines.md  4.1_todo_MCP_servers_to_integrate.md  4_First_Data_Sources.md  5.0_Readme_Dev.md  (+46 more)
docs/0_PROJECT_STRUCTURE_and_TERMS_Used/: 0_Pythia_Project_Structure.md  0_Terms_used.md
docs/1-USER_STORIES_and_PRODUCT/: 2.1_Technical_PRD.md  Product_Roadmap_Outcome_Based.md
docs/2-DATA/: 2.1_First_Data_Sources.md  GEE A2A ADK.md  To_Do_GOVERNANCE_PY_EXPLANATION.md
docs/3-EXPERIMENTS/: PROTOTYPES_README.md
docs/5-ENGINEERING/: 1.0_ENG DNU.md  2.2_System_and_architecture_overview.md  2.8_Engineering_Roadmap.md  2.9_Engineering_Success_metrics.md
docs/TODO/: 1_to_dos_Dec2025.md  2_ERDDAP_MULTIPLE_SERVERS_USAGE.md  DataSourceManager_plan.md  UX_README.md  (+2 more)
docs_backup_20250618_214657/: A2A_reference.md  ADK_A2A_Usage_Table.md  PRD.md  agent_guidelines.md
examples/: one_pager_port_of_mobile.html  resilience_brief.html
multi_tool_agent/: __init__.py  adk_integration.py  agent_team.py  agent_tools.py  communication.py  enhanced_coordinator.py  observability.py  risk_definitions.py  session_manager.py  weather_risks.py  workflows.py
readme_assets/: system_diagram.mmd
sessions/: default_user_2025-06-18T23:00:59.160921.json
src/: A2A_app.py  enums.py
standards/: README.md
templates/: index.html
test_sessions/: error_recovery_session.json  integration_test_session.json  test_session_123.json  test_session_456.json  test_session_789.json  test_user_2025-06-18T17:42:39.903289.json  test_user_2025-06-18T17:42:39.909571.json  test_user_2025-06-18T17:42:39.923809.json  test_user_2025-06-18T17:42:39.939928.json  test_user_2025-06-18T22:09:51.049828.json  test_user_2025-06-18T22:09:51.065633.json  test_user_2025-06-18T22:09:51.079344.json  test_user_2025-06-18T22:09:51.090806.json  test_user_2025-06-18T22:09:51.129849.json  test_user_2025-06-18T22:09:51.170144.json  test_user_2025-06-18T22:09:51.171293.json  test_user_2025-06-18T22:13:24.117258.json  test_user_2025-06-18T22:13:24.121155.json  test_user_2025-06-18T22:13:24.432982.json  test_user_2025-06-18T22:16:52.119802.json  test_user_2025-06-18T22:16:52.123569.json  test_user_2025-06-18T22:16:52.434567.json  test_user_2025-06-18T22:18:41.848281.json  test_user_2025-06-18T22:18:41.853574.json  test_user_2025-06-18T22:18:42.151003.json  test_user_2025-06-18T22:20:27.068651.json  test_user_2025-06-18T22:20:27.072420.json  test_user_2025-06-18T22:20:27.323815.json  test_user_2025-06-18T22:28:22.093330.json  test_user_2025-06-18T22:28:22.097660.json  test_user_2025-06-18T22:28:22.117989.json  test_user_2025-06-18T22:36:33.962014.json  test_user_2025-06-18T22:36:33.966173.json  test_user_2025-06-18T22:36:33.984000.json  test_user_2025-06-18T22:40:06.923436.json  test_user_2025-06-18T22:40:06.928512.json  test_user_2025-06-18T22:40:06.949297.json  test_user_2025-06-18T22:44:54.843632.json  test_user_2025-06-18T22:44:54.848385.json  test_user_2025-06-18T22:44:54.866125.json
tests/: conftest.py  quick_import_test.py  run_imports.py  simple_data_test.py  test_a2a_and_artifacts.py  test_adk_integration.py  test_agent_orchestration.py  test_agent_security_context.py  test_agent_system.py  test_agent_tools.py  test_agents_and_team.py  test_app.py  test_artifact_manager.py  test_batch_orchestration.py  test_bioregion_crosswalk.py  test_brief_factory_blocks.py  test_brief_factory_render.py  test_communication.py  test_config.py  test_data_and_utils.py  test_data_files.py  test_data_loader_api.py  test_data_loaders_standardized.py  test_data_source_manager.py  test_e2e_workflow.py  test_enhanced_coordinator.py  test_erddap_integration.py  test_frontend_simplified.py  test_imports.py  test_integration_and_observability.py  test_loader_tools.py  test_observability.py  test_openet_integration.py  test_payload_axes_stamp.py  test_payload_factory_blocks.py  test_payload_factory_render.py  test_performance.py  test_readme.md  test_render_export.py  test_requirement_generation.py  (+9 more)
(+289 files in other folders)
