[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_system"
version = "0.1.0"
description = "Multi-agent system for climate risk analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.5",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "cartopy>=0.22.0",
    "cfgrib>=0.9.11.0",
    "eccodes>=1.6.1",
    "pyproj>=3.6.1",
    "requests>=2.31.0",
    "google-adk>=1.3.0",
    "a2a-sdk>=0.2.8",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-core>=2.4.0",
    "google-api-core>=2.17.0",
    "google-auth>=2.27.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-logging>=3.5.0",
    "google-cloud-trace>=1.7.0",
    "opentelemetry-api>=1.12.0",
    "opentelemetry-sdk>=1.12.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-instrumentation-aiohttp>=0.34b0",
    "opentelemetry-instrumentation-grpc>=0.34b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.34b0",
    "opentelemetry-semantic-conventions>=0.34b0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-resource-manager>=1.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-speech>=2.21.0",
    "google-genai>=0.3.0",
    "graphviz>=0.20.1",
    "mcp>=1.8.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.1",
    "sqlalchemy>=2.0.0",
    "tzlocal>=5.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "pytest-env>=1.1.3",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
