[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# --- MAS Climate API Key Requirements ---
# The following environment variables are required for full data integration:
# NASA_EARTHDATA_TOKEN, NOAA_API_KEY, USGS_API_KEY, FRED_API_KEY, EPA_API_KEY, GOOGLE_API_KEY, OPENWEATHER_API_KEY, DC_API_KEY, OPENET_API_KEY, QUICKSTATS_API_KEY
# See credentials_template.txt for details and instructions.

[project]
name = "multi_agent_system"
version = "0.1.0"
description = "Multi-agent system for extreme weather risk analysis and nature-based solutions. Primary prototype: Mobile Bay, Alabama - Private Equity Investor user."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "MAS Climate Team", email = "team@masclimate.com"}
]
keywords = ["extreme-weather", "risk", "multi-agent", "weather", "finance", "sustainability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core scientific dependencies
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.5",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "cartopy>=0.22.0",
    "cfgrib>=0.9.11.0",
    "eccodes>=1.6.1",
    "pyproj>=3.6.1",
    "requests>=2.31.0",
    
    # Google ADK and AI Platform
    "google-adk>=1.5.0",
    "google-cloud-aiplatform[agent-engines]>=1.95.1",
    "google-cloud-core>=2.4.0",
    "google-api-core>=2.17.0",
    "google-auth>=2.27.0",
    "google-cloud-storage>=2.14.0",
    "google-generativeai>=0.3.0",
    "vertexai>=0.0.1",
    
    # Web framework
    "fastapi>=0.68.0",
    "jinja2>=3.0.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
    
    # Async and utilities
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    
    # Visualization
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "networkx>=3.0.0",
    
    # Security (with version pinning)
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0,<43.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "bcrypt>=4.1.2",
    
    # Monitoring and logging
    "prometheus-client>=0.12.0",
    "python-json-logger>=2.0.0",
    "structlog>=21.5.0",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2021.3",
    "tenacity>=8.0.0",
    "cachetools>=5.0.0",
    "jsonschema>=4.0.0",
    
    # Data processing
    "great-expectations>=0.18.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2023.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    
    # MCP (Model Context Protocol) dependencies
    "mcp[cli]>=1.6.0",
    "earthaccess>=0.14.0",
    "python-cmr>=0.10.0",
    "s3fs>=2022.11",
    "tinynetrc>=1.3.1",
    
    # API Client dependencies
    "fredapi>=0.5.0",
    "beautifulsoup4>=4.12.0",
    
    # Google Cloud services
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-firestore>=2.0.0",
    "google-cloud-pubsub>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Development and testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-env>=1.1.0",
    "pytest-xdist>=2.5.0",
    "pytest-benchmark>=5.1.0",
    "coverage>=6.3.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pylint>=3.1.0",
    "ruff>=0.1.0",
    "pre-commit>=2.17.0",
    
    # Documentation
    "mkdocs>=1.2.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings>=0.18.0",
    "graphviz>=0.19.0",
]

performance = [
    # Performance testing
    "locust>=2.17.0",
    "psutil>=5.9.6",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
    "redis>=5.0.1",
]

web = [
    # Web-specific dependencies
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.5",
    "aiofiles>=23.0.0",
]

data = [
    # Data processing dependencies
    "xarray>=2024.1.0",
    "netCDF4>=1.6.5",
    "cartopy>=0.22.0",
    "cfgrib>=0.9.11.0",
    "eccodes>=1.6.1",
    "pyproj>=3.6.1",
    "great-expectations>=0.18.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2023.0.0",
]

google-cloud = [
    # Google Cloud dependencies
    "google-adk>=0.1.0",
    "google-cloud-aiplatform[agent-engines]>=1.95.1",
    "google-cloud-core>=2.4.0",
    "google-api-core>=2.17.0",
    "google-auth>=2.27.0",
    "google-cloud-storage>=2.14.0",
    "google-generativeai>=0.3.0",
    "vertexai>=0.0.1",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-firestore>=2.0.0",
    "google-cloud-pubsub>=2.0.0",
]

database = [
    # Database dependencies
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.1",
]

[project.urls]
Homepage = "https://github.com/leighanne77/MAS_Extreme_Weather"
Documentation = "https://masclimate.com/docs"
Repository = "https://github.com/leighanne77/MAS_Extreme_Weather.git"
"Bug Tracker" = "https://github.com/leighanne77/MAS_Extreme_Weather/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md"]
"demo" = ["*.py"]

# Demo scripts are now located in demo/ and may require API keys for live data integrations.

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["multi_agent_system", "tool_web"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0621",  # redefined-outer-name
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db"]

[tool.pylint.design]
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 10
min-public-methods = 2
max-public-methods = 20
